--- a/Base/build.gradle
+++ b/Base/build.gradle
@@ -3,3 +3,11 @@ plugins {
 }
 
 sourceCompatibility = 1.8
+
+dependencies {
+    compile(
+            "org.projectlombok:lombok:1.18.12"
+    )
+}
+
+
