--- a/mybatis/build.gradle
+++ b/mybatis/build.gradle
@@ -4,8 +4,9 @@ plugins {
 
 sourceCompatibility = 1.8
 
-dependencies{
+dependencies {
     compile(
+            "org.mybatis:mybatis:3.4.6",
             'mysql:mysql-connector-java:8.0.16',
             'c3p0:c3p0:0.9.1.2', //数据库连接池
 
