--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ subprojects {
         compile(
                 'com.google.guava:guava:30.0-jre',//java工具
                 'jaxen:jaxen:1.1.1',//java工具
-                'dom4j:dom4j:1.6.1' //xml解析
+                'dom4j:dom4j:1.6.1', //xml解析
+                'org.apache.logging.log4j:log4j-core:2.11.1' //log4j2核心包
         )
 
         testCompile(
