--- a/mybatis/build.gradle
+++ b/mybatis/build.gradle
@@ -9,6 +9,7 @@ dependencies {
             "org.mybatis:mybatis:3.4.6",
             'mysql:mysql-connector-java:8.0.16',
             'c3p0:c3p0:0.9.1.2', //数据库连接池
+            'org.mybatis.caches:mybatis-redis:1.0.0-beta2', //数据库连接池
 
             project(':Base')
     )
