--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,7 @@ subprojects {
 
     dependencies {
         compile(
-                'com.google.guava:guava:30.0-jre',//java工具
-                'jaxen:jaxen:1.1.1',//java工具
-                'dom4j:dom4j:1.6.1', //xml解析
+
                 'log4j:log4j:1.2.17' //log4j核心包
         )
 
@@ -34,6 +32,11 @@ subprojects {
                 'org.junit.jupiter:junit-jupiter-api:5.7.0'
         )
 
+    }
+
+// UTF-8
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
     }
 }
 
