--- a/DesignPattern/build.gradle
+++ b/DesignPattern/build.gradle
@@ -6,6 +6,7 @@ sourceCompatibility = 1.8
 
 dependencies {
     compile(
+            'cglib:cglib:3.3.0', //cglib依赖包
 
             project(':Base')
     )
