--- a/SpringFrame/build.gradle
+++ b/SpringFrame/build.gradle
@@ -1,16 +1,35 @@
 plugins {
     id 'java'
+    id 'war'
 }
-
-group 'com.lglearn.ch'
-version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
-repositories {
-    mavenCentral()
+dependencies {
+    compile(
+            'mysql:mysql-connector-java:8.0.16',
+            'com.alibaba:druid:1.1.10', //连接池
+            'javax.servlet:javax.servlet-api:4.0.1', //servlet
+            'cglib:cglib:3.3.0', //cglib依赖包
+            'org.springframework:spring-context:5.3.3', //IOC容器
+            'org.springframework:spring-web:5.3.3', //IOC容器
+
+            project(':Base')
+    )
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+war{
+
+}
+
+//定义目录结构
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/resources']
+        }
+    }
 }
