aop纯注解模式

--- a/SpringFrame/src/main/webapp/WEB-INF/web.xml
+++ b/SpringFrame/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,15 @@
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
 
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+    </context-param>
+
     <!--  配置spring配置文件-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:applicationContext.xml</param-value>
+        <param-value>lglearn.SpringConfig</param-value>
     </context-param>
     <!--  配置spring ioc容器的配置文件-->
     <listener>
