--- a/SpringFrame/build.gradle
+++ b/SpringFrame/build.gradle
@@ -12,7 +12,9 @@ dependencies {
             'javax.servlet:javax.servlet-api:4.0.1', //servlet
             'cglib:cglib:3.3.0', //cglib依赖包
             'org.springframework:spring-context:5.3.3', //IOC容器
-            'org.springframework:spring-web:5.3.3', //IOC容器
+            'org.springframework:spring-web:5.3.3', //web
+            'org.springframework:spring-aop:5.3.3', //aop
+            'org.aspectj:aspectjweaver:1.9.2', //aop
 
             project(':Base')
     )
