--- a/SpringFrame/build.gradle
+++ b/SpringFrame/build.gradle
@@ -15,6 +15,8 @@ dependencies {
             'org.springframework:spring-web:5.3.3', //web
             'org.springframework:spring-aop:5.3.3', //aop
             'org.aspectj:aspectjweaver:1.9.2', //aop
+            'org.springframework:spring-jdbc:5.3.3', //jdbc
+            'org.springframework:spring-tx:5.3.3', //transaction
 
             project(':Base')
     )
