--- a/spring_mvc/src/main/webapp/WEB-INF/web.xml
+++ b/spring_mvc/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,29 @@
 <web-app>
     <display-name>web application</display-name>
 
+    <!--    过滤器post请求解决乱码-->
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>hiddenHttpMethodFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <servlet>
         <servlet-name>spring-mvc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -17,7 +40,7 @@
         <servlet-name>spring-mvc</servlet-name>
         <!--        哪些请求被springmvc拦截-->
         <!--        方式一: *.action *.do *.aaa-->
-        <!--        方式二: /   rest峰哥-->
+        <!--        方式二: /   不拦截jsp,但会拦截html-->
         <!--        方式三: /* 拦截所有,包括jsp-->
         <url-pattern>/</url-pattern>
     </servlet-mapping>
